correção e melhorias de codigo

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,7 @@
         <li>Produtos</li>
         <li>Localização</li>
         <li>SAC</li>
+        <!-- Parte Final -->
           <img src="./Cart Large.png" width="40px">
           <p id="carrinho">
           </p>
